--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,900|Lora:400">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css.map">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <title>Template</title>
 </head>
 
@@ -29,7 +29,9 @@
     </div>
   </nav>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
-  <script type="text/javascript" src="js/script.js"></script> 
+  <script type="text/javascript" src="script.js"></script> 
 </div>
+<main> 
+</main>
 </body>
 </html>
