--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <h4>Logo</h4>
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="work.html">Work</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Work</a></li>
+      <li><a href="#">Projects</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
